--- a/user-api/src/main/resources/application.properties
+++ b/user-api/src/main/resources/application.properties
@@ -1,12 +1,25 @@
-server.port=8080
+##erros
+name.not.blank=Nome não deve estar em branco.
+telefone.not.blank=telefone não deve estar em branco.
+endereco.not.blank=endereco não deve estar em branco.
+cpf.not.blank=cpf não deve estar em branco.
+email.not.blank=E-mail não deve estar em branco.
+email.not.valid=Endereço de e-mail enviado em um formato inválido.
 
+
+
+
+
+
+
+
+server.port=8080
 spring.datasource.url=jdbc:postgresql://localhost:5432/dev
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 spring.datasource.driverClassName=org.postgresql.Driver
-
-
 ## Default Schema
 spring.flyway.schemas=users
 spring.jpa.properties.hibernate.default_schema=users
+spring.flyway.enabled=false
